Dependencies/eth32_files_2.04/examples/buttons/c/eth32.h

// A few Windows types in order to keep our
// data structures consistent
typedef void *HWND;

typedef unsigned int WPARAM;

typedef long LPARAM;
typedef unsigned short WORD;


// Port the ETH32 listens on
#define ETH32_PORT    7152

// ETH32 Product ID (a portion of each serial number)
#define ETH32_PRODUCT_ID  105

// Common port direction settings
#define DIR_INPUT  0x00
#define DIR_OUTPUT 0xff

// Event type codes
#define EVENT_DIGITAL             0
#define EVENT_ANALOG              1
#define EVENT_COUNTER_ROLLOVER    2
#define EVENT_COUNTER_THRESHOLD   3
#define EVENT_HEARTBEAT           4

// Event Handler types
#define HANDLER_NONE            0
#define HANDLER_CALLBACK        1
#define HANDLER_MESSAGE         2

// Analog channel assignments
/* Single ended channels */
#define ANALOG_SE0              0x00 /* Channel 0 */
#define ANALOG_SE1              0x01
#define ANALOG_SE2              0x02
#define ANALOG_SE3              0x03
#define ANALOG_SE4              0x04
#define ANALOG_SE5              0x05
#define ANALOG_SE6              0x06
#define ANALOG_SE7              0x07
/* Differential channels */
#define ANALOG_DI00X10          0x08 /* Difference of channel 0 and 0 (for calibration), with 10X gain */
#define ANALOG_DI10X10          0x09 /* Difference of channel 1 and 0, with 10X gain */
#define ANALOG_DI00X200         0x0A
#define ANALOG_DI10X200         0x0B
#define ANALOG_DI22X10          0x0C
#define ANALOG_DI32X10          0x0D
#define ANALOG_DI22X200         0x0E
#define ANALOG_DI32X200         0x0F
#define ANALOG_DI01X1           0x10
#define ANALOG_DI11X1           0x11
#define ANALOG_DI21X1           0x12
#define ANALOG_DI31X1           0x13
#define ANALOG_DI41X1           0x14
#define ANALOG_DI51X1           0x15
#define ANALOG_DI61X1           0x16
#define ANALOG_DI71X1           0x17
#define ANALOG_DI02X1           0x18
#define ANALOG_DI12X1           0x19
#define ANALOG_DI22X1           0x1A
#define ANALOG_DI32X1           0x1B
#define ANALOG_DI42X1           0x1C
#define ANALOG_DI52X1           0x1D
#define ANALOG_122V             0x1E /* 1.22V */
#define ANALOG_0V               0x1F /* 0V */




// Counter States: Disabled, increment on falling edge, or rising edge
#define COUNTER_DISABLED        0
#define COUNTER_FALLING         1
#define COUNTER_RISING          2

// Modes for Pulse Bit:  Falling edge or Rising edge
#define PULSE_FALLING           0
#define PULSE_RISING            1

// ADC State:
#define ADC_DISABLED            0
#define ADC_ENABLED             1

// Analog voltage reference
#define REF_EXTERNAL    0   // External
#define REF_INTERNAL    1   // Internal AVCC (5V)
#define REF_256         3   // Internal 2.56V

// Default values when defining analog event thresholds
#define ANEVT_DEFAULT_LOW   0
#define ANEVT_DEFAULT_HIGH  1

// PWM Clock States
#define PWM_CLOCK_DISABLED  0
#define PWM_CLOCK_ENABLED   1

// PWM Channel States
#define PWM_CHANNEL_DISABLED    0
#define PWM_CHANNEL_NORMAL      1
#define PWM_CHANNEL_INVERTED    2


// Connection flags
#define CONN_FLAG_NONE            0x00
#define CONN_FLAG_RESPONSE        0x01
#define CONN_FLAG_DIGITAL_EVENT   0x02
#define CONN_FLAG_ANALOG_EVENT    0x04
#define CONN_FLAG_COUNTER_EVENT   0x08


// Settings for handling a full queue condition
//  DISCARD_NEW prevents the new events from being added to the queue, 
//              so the actual queue remains unchanged
//  DISCARD_OLD shifts an old event off the queue to make room for the new
#define QUEUE_DISCARD_NEW   0
#define QUEUE_DISCARD_OLD   1
// Data type for handle to the ETH32 device
typedef void *eth32;

// Relevant information about an event's firing.  This structure
// is passed in to the user-defined callback when an event fires.
// Note that 4-byte types are used here for a reason - it helps to 
// avoid problems with byte-alignment differences between different 
// programming languages using this API.
typedef struct
{
	int id; // User-defined event ID
	int type; // Event type, as defined by the EVENT_DIGITAL, EVENT_* definitions
	int port; // Digital port, Analog event bank, or Counter number
	int bit;  // Bit or Channel, or -1 for a port event
	int prev_value; // Value of the bit / port / channel before
	                // the event fired
	int value;      // New value of the bit / port / channel
	                // or the number of times the counter has fired an event or rolled
	int direction; // -1 for falling, 1 for rising
} eth32_event;


// Format for callback function used with events
typedef void (CALLCONVENTION *eth32_eventfn)(eth32 handle, eth32_event *event, void *extra);


// Event handler information
typedef struct
{
	int type; /* which method to use for event notification */
	          /* HANDLER_NONE     - none; disabled.
	           * HANDLER_CALLBACK - callback function
	           * HANDLER_MESSAGE  - Windows message notification: 
	           *     A windows message with the given message ID is sent 
	           *     to the specified window
	           *     whenever a new event fires.  This is intended to be 
	           *     used with the event queue such that when the windows
	           *     message is received, you attempt to dequeue any events
	           *     that are in the message queue.
	           */
	/* The following are only used with type HANDLER_CALLBACK */
	int maxqueue; // Maximum number of events that can be queued waiting for 
	               // the callback to finish
	int fullqueue; // What to do if queue ever gets full.  Specify one of the
	               // QUEUE_... constants
	eth32_eventfn eventfn; // Address of user-defined callback function.
	void *extra;  // Extra user-defined value to be passed to the callback
	              // whenever it is called.

	/* The following are only used with type HANDLER_MESSAGE: */
	HWND window; // Window handle to send messages to.
	unsigned int msgid; // Windows message to be sent to window.
	WPARAM wparam; // wparam to be included with any messages that are sent
	LPARAM lparam; // lparam to be included with any messages that are sent
	
} eth32_handler;






// API Functions
eth32 CALLCONVENTION CALLEXTRA eth32_open(char *address, WORD port, unsigned int timeout, int *result);

int CALLCONVENTION CALLEXTRA eth32_set_timeout(eth32 handle, unsigned int timeout);

int CALLCONVENTION CALLEXTRA eth32_get_timeout(eth32 handle, unsigned int *timeout);

int CALLCONVENTION CALLEXTRA eth32_verify_connection(eth32 handle);

int CALLCONVENTION CALLEXTRA eth32_output_byte(eth32 handle, int port, int value);

int CALLCONVENTION CALLEXTRA eth32_output_bit(eth32 handle, int port, int bit, int value);

int CALLCONVENTION CALLEXTRA eth32_pulse_bit(eth32 handle, int port, int bit, int edge, int count);

int CALLCONVENTION CALLEXTRA eth32_set_led(eth32 handle, int led, int value);

int CALLCONVENTION CALLEXTRA eth32_input_byte(eth32 handle, int port, int *value);

int CALLCONVENTION CALLEXTRA eth32_input_successive(eth32 handle, int port, int max, int *value, int *status);

int CALLCONVENTION CALLEXTRA eth32_input_bit(eth32 handle, int port, int bit, int *value);

int CALLCONVENTION CALLEXTRA eth32_readback(eth32 handle, int port, int *value);

int CALLCONVENTION CALLEXTRA eth32_get_led(eth32 handle, int led, int *value);

int CALLCONVENTION CALLEXTRA eth32_set_direction(eth32 handle, int port, int direction);

int CALLCONVENTION CALLEXTRA eth32_get_direction(eth32 handle, int port, int *direction);

int CALLCONVENTION CALLEXTRA eth32_set_direction_bit(eth32 handle, int port, int bit, int direction);

int CALLCONVENTION CALLEXTRA eth32_get_direction_bit(eth32 handle, int port, int bit, int *direction);

int CALLCONVENTION CALLEXTRA eth32_set_analog_state(eth32 handle, int state);

int CALLCONVENTION CALLEXTRA eth32_get_analog_state(eth32 handle, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_analog_reference(eth32 handle, int reference);

int CALLCONVENTION CALLEXTRA eth32_get_analog_reference(eth32 handle, int *reference);

int CALLCONVENTION CALLEXTRA eth32_input_analog(eth32 handle, int channel, int *value);

int CALLCONVENTION CALLEXTRA eth32_set_analog_eventdef(eth32 handle, int bank, int channel, int lomark, int himark, int defaultval);

int CALLCONVENTION CALLEXTRA eth32_get_analog_eventdef(eth32 handle, int bank, int channel, int *lomark, int *himark);

int CALLCONVENTION CALLEXTRA eth32_set_analog_assignment(eth32 handle, int channel, int source);

int CALLCONVENTION CALLEXTRA eth32_get_analog_assignment(eth32 handle, int channel, int *source);

int CALLCONVENTION CALLEXTRA eth32_reset(eth32 handle);

int CALLCONVENTION CALLEXTRA eth32_get_serialnum(eth32 handle, int *batch, int *unit);

int CALLCONVENTION CALLEXTRA eth32_get_serialnum_string(eth32 handle, char *serial, int bufsize);

int CALLCONVENTION CALLEXTRA eth32_get_product_id(eth32 handle, int *prodid);

int CALLCONVENTION CALLEXTRA eth32_get_firmware_release(eth32 handle, int *major, int *minor);

int CALLCONVENTION CALLEXTRA eth32_connection_flags(eth32 handle, int reset, int *flags);


int CALLCONVENTION CALLEXTRA eth32_set_event_queue_config(eth32 handle, int maxsize, int fullqueue);

int CALLCONVENTION CALLEXTRA eth32_get_event_queue_status(eth32 handle, int *maxsize, int *fullqueue, int *cursize);

int CALLCONVENTION CALLEXTRA eth32_dequeue_event(eth32 handle, eth32_event *event, int timeout);

int CALLCONVENTION CALLEXTRA eth32_empty_event_queue(eth32 handle);

int CALLCONVENTION CALLEXTRA eth32_enable_event(eth32 handle, int type, int port, int bit, int id);

int CALLCONVENTION CALLEXTRA eth32_disable_event(eth32 handle, int type, int port, int bit);

int CALLCONVENTION CALLEXTRA eth32_set_event_handler(eth32 handle, eth32_handler *handler);

int CALLCONVENTION CALLEXTRA eth32_get_event_handler(eth32 handle, eth32_handler *handler);


int CALLCONVENTION CALLEXTRA eth32_set_counter_state(eth32 handle, int counter, int state);

int CALLCONVENTION CALLEXTRA eth32_get_counter_state(eth32 handle, int counter, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_counter_value(eth32 handle, int counter, int value);

int CALLCONVENTION CALLEXTRA eth32_get_counter_value(eth32 handle, int counter, int *value);

int CALLCONVENTION CALLEXTRA eth32_set_counter_rollover(eth32 handle, int counter, int rollover);

int CALLCONVENTION CALLEXTRA eth32_get_counter_rollover(eth32 handle, int counter, int *rollover);

int CALLCONVENTION CALLEXTRA eth32_set_counter_threshold(eth32 handle, int counter, int threshold);

int CALLCONVENTION CALLEXTRA eth32_get_counter_threshold(eth32 handle, int counter, int *threshold);


int CALLCONVENTION CALLEXTRA eth32_set_pwm_clock_state(eth32 handle, int state);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_clock_state(eth32 handle, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_pwm_base_period(eth32 handle, int period);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_base_period(eth32 handle, int *period);

int CALLCONVENTION CALLEXTRA eth32_set_pwm_channel(eth32 handle, int channel, int state);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_channel(eth32 handle, int channel, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_pwm_duty_period(eth32 handle, int channel, int period);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_duty_period(eth32 handle, int channel, int *period);