Dependencies/eth32_files_2.04/api/windows/vb6/eth32.bas

Attribute VB_Name = "eth32_mod"
' Winford Engineering ETH32 Declarations Library
' Copyright 2005
' www.winford.com
'
' This module is intended for use with Visual Basic 5/6 to provide
' constants and function declarations for the ETH32 API (eth32api.dll)
' (Note the "api" on the end of the file name, which avoids conflicts
'  with the Visual Studio .NET class library, which is eth32.dll)


Option Explicit

Public Const ETH32_PORT As Integer = 7152
Public Const DIR_INPUT As Long = 0
Public Const DIR_OUTPUT As Long = &HFF
Public Const ETH32_PRODUCT_ID As Byte = 105

Public Enum Eth32EventType
    EVENT_DIGITAL = 0
    EVENT_ANALOG = 1
    EVENT_COUNTER_ROLLOVER = 2
    EVENT_COUNTER_THRESHOLD = 3
    EVENT_HEARTBEAT = 4
End Enum


' Used internally by the class only
Public Const HANDLER_NONE As Long = 0
Public Const HANDLER_CALLBACK As Long = 1
Public Const HANDLER_MESSAGE As Long = 2


' Analog channel assignments
' Single ended channels

Public Enum Eth32AnalogChannel
    ANALOG_SE0 = &H0              ' Channel 0
    ANALOG_SE1 = &H1
    ANALOG_SE2 = &H2
    ANALOG_SE3 = &H3
    ANALOG_SE4 = &H4
    ANALOG_SE5 = &H5
    ANALOG_SE6 = &H6
    ANALOG_SE7 = &H7

    ' Differential channels
    ANALOG_DI00X10 = &H8           ' Difference of channel 0 and 0 (for calibration), with 10X gain
    ANALOG_DI10X10 = &H9          ' Difference of channel 1 and 0, with 10X gain
    ANALOG_DI00X200 = &HA
    ANALOG_DI10X200 = &HB
    ANALOG_DI22X10 = &HC
    ANALOG_DI32X10 = &HD
    ANALOG_DI22X200 = &HE
    ANALOG_DI32X200 = &HF
    ANALOG_DI01X1 = &H10
    ANALOG_DI11X1 = &H11
    ANALOG_DI21X1 = &H12
    ANALOG_DI31X1 = &H13
    ANALOG_DI41X1 = &H14
    ANALOG_DI51X1 = &H15
    ANALOG_DI61X1 = &H16
    ANALOG_DI71X1 = &H17
    ANALOG_DI02X1 = &H18
    ANALOG_DI12X1 = &H19
    ANALOG_DI22X1 = &H1A
    ANALOG_DI32X1 = &H1B
    ANALOG_DI42X1 = &H1C
    ANALOG_DI52X1 = &H1D
    ANALOG_122V = &H1E            ' 1.22V
    ANALOG_0V = &H1F              ' 0V
End Enum

Public Enum Eth32CounterState
    COUNTER_DISABLED = 0
    COUNTER_FALLING = 1
    COUNTER_RISING = 2
End Enum

Public Enum Eth32AnalogState
    ADC_DISABLED = 0
    ADC_ENABLED = 1
End Enum

Public Enum Eth32AnalogReference
    REF_EXTERNAL = 0
    REF_INTERNAL = 1
    REF_256 = 3
End Enum

Public Enum Eth32PulseEdge
    PULSE_FALLING = 0
    PULSE_RISING = 1
End Enum

Public Enum Eth32AnalogEvtDef
    ANEVT_DEFAULT_LOW = 0
    ANEVT_DEFAULT_HIGH = 1

End Enum

Public Enum Eth32PwmClock
    PWM_CLOCK_DISABLED = 0
    PWM_CLOCK_ENABLED = 1
End Enum

Public Enum Eth32PwmChannel
    PWM_CHANNEL_DISABLED = 0
    PWM_CHANNEL_NORMAL = 1
    PWM_CHANNEL_INVERTED = 2
End Enum

Public Enum Eth32ConnectionFlag
    CONN_FLAG_NONE = &H0
    CONN_FLAG_RESPONSE = &H1
    CONN_FLAG_DIGITAL_EVENT = &H2
    CONN_FLAG_ANALOG_EVENT = &H4
    CONN_FLAG_COUNTER_EVENT = &H8
End Enum


' Settings for handling a full queue condition
'  DISCARD_NEW prevents the new events from being added to the queue,
'              so the actual queue remains unchanged
'  DISCARD_OLD shifts an old event off the queue to make room for the new
Public Enum Eth32QueueMode
    QUEUE_DISCARD_NEW = 0
    QUEUE_DISCARD_OLD = 1
End Enum

' Event information structure
Public Type eth32_event
  id As Long
  type As Long
  port As Long
  bit As Long
  prev_value As Long
  value As Long
  direction As Long
End Type


' Event handler definition structure
Public Type eth32_handler
  type As Long
  maxqueue As Long
  fullqueue As Long
  eventfn As Long ' Address of callback function
  extra As Long
  window As Long ' Window to send messages to
  msgid As Long
  wparam As Long
  lparam As Long
End Type

Public Declare Function eth32_open Lib "eth32api.dll" (ByVal address As String, ByVal port As Integer, ByVal Timeout As Long, ByRef Result As Long) As Long
Public Declare Function eth32_set_timeout Lib "eth32api.dll" (ByVal handle As Long, ByVal Timeout As Long) As Long
Public Declare Function eth32_get_timeout Lib "eth32api.dll" (ByVal handle As Long, ByRef Timeout As Long) As Long
Public Declare Function eth32_verify_connection Lib "eth32api.dll" (ByVal handle As Long) As Long
Public Declare Function eth32_output_byte Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal value As Long) As Long
Public Declare Function eth32_output_bit Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal bit As Long, ByVal value As Long) As Long
Public Declare Function eth32_pulse_bit Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal bit As Long, ByVal edge As Long, ByVal count As Long) As Long
Public Declare Function eth32_set_led Lib "eth32api.dll" (ByVal handle As Long, ByVal Led As Long, ByVal value As Long) As Long
Public Declare Function eth32_input_byte Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByRef value As Long) As Long
Public Declare Function eth32_input_successive Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal max As Long, ByRef value As Long, ByRef status As Long) As Long
Public Declare Function eth32_input_bit Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal bit As Long, ByRef value As Long) As Long
Public Declare Function eth32_readback Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByRef value As Long) As Long
Public Declare Function eth32_get_led Lib "eth32api.dll" (ByVal handle As Long, ByVal Led As Long, ByRef value As Long) As Long
Public Declare Function eth32_set_direction Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal direction As Long) As Long
Public Declare Function eth32_get_direction Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByRef direction As Long) As Long
Public Declare Function eth32_set_direction_bit Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal bit As Long, ByVal direction As Long) As Long
Public Declare Function eth32_get_direction_bit Lib "eth32api.dll" (ByVal handle As Long, ByVal port As Long, ByVal bit As Long, ByRef direction As Long) As Long
Public Declare Function eth32_set_analog_state Lib "eth32api.dll" (ByVal handle As Long, ByVal state As Long) As Long
Public Declare Function eth32_get_analog_state Lib "eth32api.dll" (ByVal handle As Long, ByRef state As Long) As Long
Public Declare Function eth32_set_analog_reference Lib "eth32api.dll" (ByVal handle As Long, ByVal reference As Long) As Long
Public Declare Function eth32_get_analog_reference Lib "eth32api.dll" (ByVal handle As Long, ByRef reference As Long) As Long
Public Declare Function eth32_input_analog Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByRef value As Long) As Long
Public Declare Function eth32_set_analog_eventdef Lib "eth32api.dll" (ByVal handle As Long, ByVal bank As Long, ByVal channel As Long, ByVal lomark As Long, ByVal himark As Long, ByVal defaultval As Long) As Long
Public Declare Function eth32_get_analog_eventdef Lib "eth32api.dll" (ByVal handle As Long, ByVal bank As Long, ByVal channel As Long, ByRef lomark As Long, ByRef himark As Long) As Long
Public Declare Function eth32_set_analog_assignment Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByVal source As Long) As Long
Public Declare Function eth32_get_analog_assignment Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByRef source As Long) As Long
Public Declare Function eth32_reset Lib "eth32api.dll" (ByVal handle As Long) As Long
Public Declare Function eth32_get_serialnum Lib "eth32api.dll" (ByVal handle As Long, ByRef batch As Long, ByRef unit As Long) As Long
Public Declare Function eth32_get_serialnum_string Lib "eth32api.dll" (ByVal handle As Long, ByVal serial As String, ByVal bufsize As Long) As Long
Public Declare Function eth32_get_product_id Lib "eth32api.dll" (ByVal handle As Long, ByRef prodid As Long) As Long
Public Declare Function eth32_get_firmware_release Lib "eth32api.dll" (ByVal handle As Long, ByRef major As Long, ByRef minor As Long) As Long
Public Declare Function eth32_connection_flags Lib "eth32api.dll" (ByVal handle As Long, ByVal reset As Long, ByRef flags As Long) As Long

Public Declare Function eth32_set_event_queue_config Lib "eth32api.dll" (ByVal handle As Long, ByVal maxsize As Long, ByVal fullqueue As Long) As Long
Public Declare Function eth32_get_event_queue_status Lib "eth32api.dll" (ByVal handle As Long, ByRef maxsize As Long, ByRef fullqueue As Long, ByRef cursize As Long) As Long
Public Declare Function eth32_dequeue_event Lib "eth32api.dll" (ByVal handle As Long, ByRef event_info As eth32_event, ByVal Timeout As Long) As Long
Public Declare Function eth32_empty_event_queue Lib "eth32api.dll" (ByVal handle As Long) As Long
Public Declare Function eth32_enable_event Lib "eth32api.dll" (ByVal handle As Long, ByVal evtype As Long, ByVal port As Long, ByVal bit As Long, ByVal id As Long) As Long
Public Declare Function eth32_disable_event Lib "eth32api.dll" (ByVal handle As Long, ByVal evtype As Long, ByVal port As Long, ByVal bit As Long) As Long
Public Declare Function eth32_set_event_handler Lib "eth32api.dll" (ByVal handle As Long, ByRef handler As eth32_handler) As Long
Public Declare Function eth32_get_event_handler Lib "eth32api.dll" (ByVal handle As Long, ByRef handler As eth32_handler) As Long

Public Declare Function eth32_set_counter_state Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByVal state As Long) As Long
Public Declare Function eth32_get_counter_state Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByRef state As Long) As Long
Public Declare Function eth32_set_counter_value Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByVal value As Long) As Long
Public Declare Function eth32_get_counter_value Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByRef value As Long) As Long
Public Declare Function eth32_set_counter_rollover Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByVal rollover As Long) As Long
Public Declare Function eth32_get_counter_rollover Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByRef rollover As Long) As Long
Public Declare Function eth32_set_counter_threshold Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByVal threshold As Long) As Long
Public Declare Function eth32_get_counter_threshold Lib "eth32api.dll" (ByVal handle As Long, ByVal counter As Long, ByRef threshold As Long) As Long

Public Declare Function eth32_set_pwm_clock_state Lib "eth32api.dll" (ByVal handle As Long, ByVal state As Long) As Long
Public Declare Function eth32_get_pwm_clock_state Lib "eth32api.dll" (ByVal handle As Long, ByRef state As Long) As Long
Public Declare Function eth32_set_pwm_base_period Lib "eth32api.dll" (ByVal handle As Long, ByVal period As Long) As Long
Public Declare Function eth32_get_pwm_base_period Lib "eth32api.dll" (ByVal handle As Long, ByRef period As Long) As Long
Public Declare Function eth32_set_pwm_channel Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByVal state As Long) As Long
Public Declare Function eth32_get_pwm_channel Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByRef state As Long) As Long
Public Declare Function eth32_set_pwm_duty_period Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByVal period As Long) As Long
Public Declare Function eth32_get_pwm_duty_period Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByRef period As Long) As Long
